--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,30 +1,56 @@
-.Login-container{
+* {
+    box-sizing: border-box;
+}
+
+.login-container {
     background: white;
     text-align: center;
     border-radius: 25px;
+    font-family: 'Space Grotesk', sans-serif;
     width: 30%;
     padding: 5%;
     color: #282C34;
-    margin: auto;
+    margin: 0 auto;
+    box-shadow: 10px 10px;
+    transition: all .2s ease-in-out; 
 }
-.Login-container input{
+
+.login-container input {
     margin-bottom: 5%;
     padding: 3%;
     border-radius: 25px;
+    font-family: inherit;
+    border-color: black;
 }
 
-.login-button{
+.login-container input:focus  {
+    transform: scale(1.1);
+    border-color: inherit;
+    /* box-shadow: 3px 3px; */
+}
+
+.login-button {
     background-color: #282C34;
     border-radius: 20px 5px 20px 5px !important;
     padding: 3% !important;
-    margin-top:5%;
+    margin-top: 5%;
     color: white;
     border: none;
     transition: all .2s ease-in-out; 
 }
 
-.login-button:hover{
-    cursor:pointer;
+.login-button:hover {
+    cursor: pointer;
     transform: scale(1.1);
     background: #3b414e;
 }
+
+.image {
+    float: left;
+}
+
+/* @media screen and (max-width: 750px) {
+    
+} */
+
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap');
