--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -2,17 +2,33 @@
     box-sizing: border-box;
 }
 
+.login-wrapper {
+    font-family: 'Space Grotesk', sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
+
 .login-container {
     background: white;
     text-align: center;
     border-radius: 25px;
-    font-family: 'Space Grotesk', sans-serif;
     width: 30%;
-    padding: 5%;
+    padding: 2%;
     color: #282C34;
     margin: 0 auto;
     box-shadow: 10px 10px;
     transition: all .2s ease-in-out; 
+}
+
+.login-container img {
+    max-width: 30%;
+    max-height: 30%;
+    width: auto;
+    height: auto;
+    margin: 0 auto;
 }
 
 .login-container input {
@@ -20,20 +36,26 @@
     padding: 3%;
     border-radius: 25px;
     font-family: inherit;
-    border-color: black;
+    border: solid 2px black;
+    transition: all .2s ease-in-out; 
+}
+
+.login-container input:first-child {
+    margin-top: 5%;
 }
 
 .login-container input:focus  {
     transform: scale(1.1);
-    border-color: inherit;
+    border: solid 1px black;
     /* box-shadow: 3px 3px; */
 }
 
 .login-button {
+    font-size: 100%;
     background-color: #282C34;
+    border-color: #282C34 !important;
     border-radius: 20px 5px 20px 5px !important;
-    padding: 3% !important;
-    margin-top: 5%;
+    padding: 10px !important;
     color: white;
     border: none;
     transition: all .2s ease-in-out; 
@@ -41,12 +63,36 @@
 
 .login-button:hover {
     cursor: pointer;
-    transform: scale(1.1);
+    transform: scale(1.1) rotate(2deg);
     background: #3b414e;
+    border-color: #3b414e !important;
 }
 
-.image {
-    float: left;
+.register {
+    display: flex;
+    align-items: center;
+    color: white;
+    margin-top: 2%;
+}
+.register p {
+    display: inline;
+    margin: 0;
+}
+
+.register a {
+    color: inherit;
+    text-decoration: none;
+    background-color: #282C34;
+    padding: 10px;
+    border-radius: 20px 5px 20px 5px !important;
+    transition: all .2s ease-in-out; 
+    margin-left: 10px;
+}
+
+.register a:hover {
+    transform: scale(1.1) rotate(2deg);
+    background: #3b414e;
+    border-color: #3b414e !important;
 }
 
 /* @media screen and (max-width: 750px) {
