--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,8 +1,65 @@
-.NavWrapper{
-    width: 100%;
-    background-color: #282C34;
-}
 .NavWrapper *{
-    display: inline-block;
-    margin-left: 5%;
+    font-family: 'Open Sans', sans-serif;
 }
+
+.NavWrapper{
+    background-color: #282C34;
+    color: white ;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 3%;
+}
+
+.Welcome-Message {
+    position: relative;
+    text-align: center;
+    display: flex;
+    align-items: center;
+}
+
+.Welcome-Message img {
+    display: inline;
+    max-width: 30%;
+    max-height: 30%;
+    width: auto;
+    height: auto;
+    margin-right: 1%;
+    -webkit-filter: invert(100%); /* Safari/Chrome */
+    filter: invert(100%);
+}
+
+.NavButtons{
+    list-style-type: none;
+    position: relative;
+    text-align: center;
+    display: flex;
+    align-items: center;
+}
+
+.NavButtons li{
+    display: inline-block;
+}
+
+
+.NavButtons li a {
+    color: white;
+    text-align: center;
+    padding: 0px 20px;
+    text-decoration: none;
+}
+
+.NavButtons li a:hover {
+   color: #0088a9;
+}
+
+.logout{
+    padding: 0 0 0 10%;
+}
+
+.logout .icon:hover {
+    color: #0088a9;
+    cursor: pointer;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Outfit:wght@700&family=Space+Grotesk&display=swap');
