--- a/src/components/GradePassword/GradePassword.css
+++ b/src/components/GradePassword/GradePassword.css
@@ -2,12 +2,13 @@
     width: 100%;
     background-color: #e0e0e0;
     height: 20px;
-    border-radius: 4px;
+    border-radius: 10px;
     overflow: hidden;
+    border: #282C34 solid 2px;
   }
+  
   
   .strength-bar {
     height: 100%;
-    background-color: #4caf50;
   }
   
