--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -47,9 +47,11 @@
     text-align: center;
     padding: 0px 20px;
     text-decoration: none;
+    transition: all .2s ease-in-out; 
 }
 
 .NavButtons li a:hover {
+   font-size: 120%;
    color: #0088a9;
 }
 
@@ -57,9 +59,14 @@
     padding: 0 0 0 10%;
 }
 
+.logout .icon{
+    transition: all .2s ease-in-out; 
+}
+
 .logout .icon:hover {
     color: #0088a9;
     cursor: pointer;
+    transform: scale(1.2);
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Outfit:wght@700&family=Space+Grotesk&display=swap');
