--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,8 +1,8 @@
-.NavWrapper *{
+.NavWrapper * {
     font-family: 'Open Sans', sans-serif;
 }
 
-.NavWrapper{
+.NavWrapper {
     background-color: #282C34;
     color: white ;
     display: flex;
@@ -18,6 +18,10 @@
     align-items: center;
 }
 
+.Welcome-Message h2 {
+    margin-left: 16px;
+}
+
 .Welcome-Message img {
     display: inline;
     max-width: 30%;
@@ -29,7 +33,7 @@
     filter: invert(100%);
 }
 
-.NavButtons{
+.NavButtons {
     list-style-type: none;
     position: relative;
     text-align: center;
@@ -37,7 +41,7 @@
     align-items: center;
 }
 
-.NavButtons li{
+.NavButtons li {
     display: inline-block;
 }
 
@@ -55,11 +59,11 @@
    color: #0088a9;
 }
 
-.logout{
+.logout {
     padding: 0 0 0 10%;
 }
 
-.logout .icon{
+.logout .icon {
     transition: all .2s ease-in-out; 
 }
 
