--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -1,3 +1,17 @@
 .main-container input:last-child {
 	margin-bottom: 0;
 }
+
+/* ------------- Mobile Phone ------------- */
+
+@media only screen and (max-width: 1200px) {
+    .register-title h1 {
+		font-size: 250%;
+	}
+}
+
+@media only screen and (max-width: 990px) {
+    .register-title h1 {
+		font-size: 300%;
+	}
+}
