--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,122 @@
 body {
-  margin: 0;
-  font-family: Verdana, sans-serif;
-  /* fallback for old browsers */
-  background: #6a11cb;
+    margin: 0;
+    font-family: Verdana, sans-serif;
+    /* fallback for old browsers */
+    background: #6a11cb;
 
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
 
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
-
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+        monospace;
 }
 
+/* ------------- Wrapper/Container ------------- */
+
+.main-wrapper {
+    font-family: 'Space Grotesk', sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 98vh;
+}
+
+.main-container {
+    background: white;
+    text-align: center;
+    border-radius: 25px;
+    width: 35%;
+    padding: 2%;
+    color: #282C34;
+    margin: 0 auto;
+    box-shadow: 10px 10px;
+}
+
+/* ------------- Form Elements ------------- */
+
+.main-container input {
+    margin-bottom: 5%;
+    padding: 3%;
+    border-radius: 25px;
+    font-family: inherit;
+    border: solid 2px black;
+    transition: all .2s ease-in-out; 
+}
+
+.main-container input:first-child {
+    margin-top: 5%;
+}
+
+.main-container input:focus  {
+    transform: scale(1.1);
+    border: solid 1px black;
+}
+
+.main-button {
+    font-size: 100%;
+    background-color: #282C34;
+    border-color: #282C34 !important;
+    border-radius: 20px 5px 20px 5px !important;
+    padding: 10px !important;
+    color: white;
+    border: none;
+    transition: all .2s ease-in-out; 
+}
+
+.main-button:hover {
+    cursor: pointer;
+    transform: scale(1.1) rotate(2deg);
+    background: #3b414e;
+    border-color: #3b414e !important;
+}
+
+/* ------------- Title ------------- */
+
+.main-title {
+    position: relative;
+    text-align: center;
+    display: flex;
+    align-items: center;
+}
+
+.main-title img {
+    display: inline;
+    max-width: 20%;
+    max-height: 20%;
+    width: auto;
+    height: auto;
+}
+
+.main-title h1 {
+    font-size: 300%;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    font-family: 'Outfit', sans-serif;
+}
+
+/* ------------- Mobile Phone ------------- */
+
+@media only screen and (max-width: 990px) {
+    .main-container {
+        width: 100%;
+    }
+
+    .register {
+        margin-top: 4% !important;
+    }
+}
+
+/* ------------- Error ------------- */
+
+.main-error p {
+    font-family: 'Open Sans', sans-serif;
+    color: red;
+    margin: 0 0 5% 0;
+}
