Worked on add password and edit password page some more.

--- a/src/components/AddPassword/AddPassword.css
+++ b/src/components/AddPassword/AddPassword.css
@@ -1,15 +1,19 @@
-.add-button{
+.add-button {
     background: none;
     border: none;
     transition: all .2s ease-in-out; 
 }
 
-.add-button:hover{
+.add-button:hover {
     transform: scale(1.2);
     cursor: pointer;
 }
 
-.addPassword{
+.addPassword {
     width: 50% !important;
     margin: auto !important;
+}
+
+#add-pass-options {
+    justify-content: center;
 }
