--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -29,7 +29,7 @@ table {
 /* ------------- Edit Password ------------- */
 
 .edit-pass-button {
-    /* font-size: 100%; */
+    font-size: 16px;
     background-color: #282C34;
     border-color: #282C34 !important;
     border-radius: 20px 5px 20px 5px !important;
@@ -39,13 +39,13 @@ table {
     transition: all .2s ease-in-out; 
 }
 
-#edit-cancel-button {
-    font-size: 15px;
-}
-
 .edit-pass-button:hover {
     cursor: pointer;
     transform: scale(1.1) rotate(2deg);
     background: #3b414e;
     border-color: #3b414e !important;
+}
+
+ #edit-pass-save {
+    margin-right: 12px;
 }
